--- a/assets/style.css
+++ b/assets/style.css
@@ -5,3 +5,47 @@ body {
     background-size: cover;
     background-position: bottom;
 }
+
+.usamap {
+    position: fixed;
+    height: 60rem;
+    width: 60rem;
+    left: 0px;
+    padding: 30px;
+}
+
+.doorcontainer {
+    position: absolute;
+    width:100%;
+    height:100%;
+    overflow: hidden;
+}
+
+.topdoor {
+    background-color:#3266bacc; 
+    height: 30%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    margin-top: 58.19px;
+    animation: topdoor 3s; 
+}
+
+.bottomdoor {
+    background-color: #3266bacc;
+    height: 30%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    animation: bottomdoor 3s;    
+}
+
+@keyframes topdoor {
+    from{top:-30%;}
+    to{top:0;}
+}
+
+@keyframes bottomdoor {
+    from{bottom:-30%;}
+    to{bottom:0;}
+}
