--- a/assets/style.css
+++ b/assets/style.css
@@ -1,17 +1,9 @@
 body {
-    background-image: url('../assets/housebackground.jpg');
+    background-image: url('../assets/housebackground.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
-}
-
-.usamap {
-    margin: 0;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .doorcontainer {
@@ -29,6 +21,8 @@ body {
     top: 0;
     margin-top: 58.19px;
     animation: topdoor 2s; 
+    animation-fill-mode: backwards;
+    animation-delay: 500ms;
 }
 
 .bottomdoor {
@@ -37,7 +31,9 @@ body {
     width: 100%;
     position: absolute;
     bottom: 0;
-    animation: bottomdoor 2s;    
+    animation: bottomdoor 2s;
+    animation-fill-mode: backwards;    
+    animation-delay: 500ms;
 }
 
 @keyframes topdoor {
@@ -48,4 +44,24 @@ body {
 @keyframes bottomdoor {
     from{bottom:-30%;}
     to{bottom:0;}
+}
+
+.usamap {
+    margin: 0;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.welcome-box {
+    border: black;
+    background-color:#ffffffdc;
+    font-family: 'Prompt', sans-serif;
+    margin: 0;
+    margin-left: 35rem;
+    position: absolute;
+    top: 53%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
