--- a/assets/style.css
+++ b/assets/style.css
@@ -20,9 +20,10 @@ body {
     position: absolute;
     top: 0;
     margin-top: 58.19px;
-    animation: topdoor 2s; 
+    animation: topdoor 1s; 
     animation-fill-mode: backwards;
     animation-delay: 500ms;
+    animation-timing-function: ease-out;
 }
 
 .bottomdoor {
@@ -31,9 +32,10 @@ body {
     width: 100%;
     position: absolute;
     bottom: 0;
-    animation: bottomdoor 2s;
+    animation: bottomdoor 1s;
     animation-fill-mode: backwards;    
     animation-delay: 500ms;
+    animation-timing-function: ease-out;
 }
 
 @keyframes topdoor {
