--- a/assets/style.css
+++ b/assets/style.css
@@ -67,3 +67,11 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.email {
+    margin-right: 1px;
+}
+
+.password {
+    margin-left: 1px;
+}
